# scout_mini_description

./: CMakeLists.txt  README.md  package.xml
launch/: view_robot.launch.py
rviz/: robot_config.rviz
urdf/: robot.urdf  test.urdf
urdf/meshes/: New_Slam.dae  ZED2i v1.stl  base_robot 1(2).dae  lidar.dae  mini with IC v3.stl  mini_ic.dae  mini_with_IC_v3.dae  zed_v3.dae
